--- a/Demo_BTL.csproj
+++ b/Demo_BTL.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Form\Home.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +76,18 @@
     </Compile>
     <Compile Include="Form\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Khoa.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Khu_nha.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Lop.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Phong.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -127,6 +151,48 @@
     <Compile Include="Form\TraPhong.Designer.cs">
       <DependentUpon>TraPhong.cs</DependentUpon>
     </Compile>
+    <Compile Include="Qly_KTX_Entity.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Qly_KTX_Entity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Qly_KTX_Entity.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Qly_KTX_Entity.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Qly_KTX_Entity.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Que.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sinhvien.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Thietbi_Phong.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Thiet_Bi.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Form\ThongTin.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Form\ThongTin.Designer.cs">
+      <DependentUpon>ThongTin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Thuephong.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Thutienphong.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Traphong.cs">
+      <DependentUpon>Qly_KTX_Entity.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
@@ -175,6 +241,10 @@
     <EmbeddedResource Include="Form\TraPhong.resx">
       <DependentUpon>TraPhong.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form\ThongTin.resx">
+      <DependentUpon>ThongTin.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -184,12 +254,34 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EntityDeploy Include="Qly_KTX_Entity.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Qly_KTX_Entity.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Qly_KTX_Entity.edmx.diagram">
+      <DependentUpon>Qly_KTX_Entity.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="imgsource\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Qly_KTX_Entity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Qly_KTX_Entity.Context.cs</LastGenOutput>
+      <DependentUpon>Qly_KTX_Entity.edmx</DependentUpon>
+    </Content>
+    <Content Include="Qly_KTX_Entity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Qly_KTX_Entity.edmx</DependentUpon>
+      <LastGenOutput>Qly_KTX_Entity.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
